<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="368dp"
    android:layout_height="495dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp"
    tools:context="com.example.chrisdarnell.asssqlloc.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">


            <EditText
                android:id="@+id/label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/latsym" />

            <TextView
                android:id="@+id/productQuantity"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitudesym" />

            <TextView
                android:id="@+id/productID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/button"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:onClick="newProduct"
                android:text="@string/submit" />

            <Button
                android:id="@+id/button2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:onClick="lookupProduct"
                android:text="@string/display" />
        </LinearLayout>

        <TextView
            android:id="@+id/sql_listview"
            android:layout_width="358dp"
            android:layout_height="278dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>




